apps/base/memos/memos.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos-system
  labels:
    networking.tinyrack.net/isolation: enabled
