apps/base/memos/memos.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos-service
  namespace: memos-system
spec:
  selector:
    app: memos
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5230
    - name: https
      protocol: TCP
      port: 443
      targetPort: 5230
  type: ClusterIP
