apps/base/memos/memos.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-memos
  namespace: memos-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        app: memos
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "5230"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: memos-system
              cnpg.io/cluster: memos-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        cnpg.io/cluster: memos-database-cluster
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: memos-system
              app: memos
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cnpg-system
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "9187"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: memos-system
              cnpg.io/cluster: memos-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: memos-system
              cnpg.io/cluster: memos-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
